--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs selectedIndex="2">
+<ion-tabs selectedIndex="activeTab">
   <ion-tab [root]="tab1Root" tabTitle="Home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Spending"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Assets"></ion-tab>
