--- a/src/pages/assets/assets.html
+++ b/src/pages/assets/assets.html
@@ -20,32 +20,36 @@
 
 
 <ion-content padding>
-	<ion-segment [(ngModel)]="contentButtons">
+	<ion-segment [(ngModel)]="contentButtons" (ionChange)="assetsSegmentChanged($event)">
 		<ion-segment-button value="My Assets">My Assets</ion-segment-button>
 		<ion-segment-button value="Opportunities">Opportunities</ion-segment-button>
 	</ion-segment>
-	<ion-card>
-		<p>+3%</p>
-		<p>Earning balance</p>
-		<p>1,004.23</p>
-	</ion-card>
-	<ion-segment color="primary">
-		<ion-segment-button value="All">
-			All
-		</ion-segment-button>
-		<ion-segment-button value="Savings">
-			Savings
-		</ion-segment-button>
-		<ion-segment-button value="P2P">
-			P2P
-		</ion-segment-button>	
-		<ion-segment-button value="Funds">
-			Funds
-		</ion-segment-button>
-	</ion-segment>
-	<ion-list *ngIf="assetsData">
-		<ion-item *ngFor="let asset of assetsData">
-			<h2>{{asset.type}}</h2>
-		</ion-item>
-	</ion-list>
+	<ng-container *ngIf="contentButtons=='My Assets'">
+		<ion-card>
+			<p>+3%</p>
+			<p>Earning balance</p>
+			<p>1,004.23</p>
+		</ion-card>
+		<ion-segment [(ngModel)]="typeOfInvestmentButtons" (ionChange)="typeOfInvestmentSegmentChanged($event)">
+			<ion-segment-button value="All">
+				All
+			</ion-segment-button>
+			<ion-segment-button value="Savings">
+				Savings
+			</ion-segment-button>
+			<ion-segment-button value="P2P">
+				P2P
+			</ion-segment-button>	
+			<ion-segment-button value="Funds">
+				Funds
+			</ion-segment-button>
+		</ion-segment>
+		<ion-list *ngIf="filteredAssetsData">
+			<ion-item *ngFor="let asset of filteredAssetsData">
+				<h2>{{asset.type}}</h2>
+				<p>{{asset.nameOfInvestment}}</p>
+				<p>{{asset.amount}} {{asset.units}}</p>
+			</ion-item>
+		</ion-list>
+	</ng-container>
 </ion-content>
